// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTileEnlargedModel can build a tile with the given size 1`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 0.5 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 1 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 2 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 3 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 4 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and direction 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "center": Object {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "edge": Object {
    "x": 16.109127034739885,
    "y": 138.89087296526012,
  },
  "height": 141.4213562373095,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": -45,
    "x": 100,
    "y": 177.78174593052023,
  },
  "width": 115.71067811865476,
  "x": 16.109127034739885,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "center": Object {
    "x": 0,
    "y": 55,
  },
  "edge": Object {
    "x": -31.819805153394636,
    "y": 86.81980515339464,
  },
  "height": 100,
  "in": Object {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "out": Object {
    "angle": -90,
    "x": 55,
    "y": 55,
  },
  "width": 100,
  "x": -45,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "center": Object {
    "x": -16.672618895780317,
    "y": 216.67261889578037,
  },
  "edge": Object {
    "x": -116.67261889578029,
    "y": 216.6726188957804,
  },
  "height": 296.98484809834997,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 315,
    "x": 100.00000000000006,
    "y": 333.3452377915607,
  },
  "width": 248.49242404917499,
  "x": -116.67261889578029,
  "y": 68.18019484660535,
}
`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "center": Object {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "edge": Object {
    "x": 61.1091270347399,
    "y": 183.89087296526012,
  },
  "height": 115.71067811865476,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 135,
    "x": 22.21825406947977,
    "y": 100,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914867,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "center": Object {
    "x": 0,
    "y": 55,
  },
  "edge": Object {
    "x": 31.81980515339464,
    "y": 86.81980515339464,
  },
  "height": 100,
  "in": Object {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "out": Object {
    "angle": 90,
    "x": -55,
    "y": 55,
  },
  "width": 100,
  "x": -55.00000000000001,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "center": Object {
    "x": -16.672618895780317,
    "y": 216.67261889578037,
  },
  "edge": Object {
    "x": -16.672618895780275,
    "y": 316.6726188957804,
  },
  "height": 248.49242404917504,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 135,
    "x": -133.3452377915607,
    "y": 100.00000000000006,
  },
  "width": 296.98484809834997,
  "x": -165.16504294495533,
  "y": 68.18019484660535,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `6`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `12`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `16`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `6`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `45`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `100`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `155`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `210`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": 100.00000000000001,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": 100.00000000000001,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": 100.00000000000003,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": -31.819805153394636,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 68.18019484660536,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": -31.819805153394636,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 68.18019484660536,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": -31.819805153394636,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 68.18019484660536,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": -31.819805153394636,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 68.18019484660536,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": -70.71067811865474,
  "y": 235.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 29.28932188134526,
  "y": 335.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -135.71067811865476,
  "y": 29.289321881345273,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": -70.71067811865474,
  "y": 235.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 29.28932188134526,
  "y": 335.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -135.71067811865476,
  "y": 29.289321881345273,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": -109.60155108391486,
  "y": 384.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": -9.601551083914856,
  "y": 484.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -284.60155108391484,
  "y": -9.601551083914828,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": -109.60155108391486,
  "y": 384.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": -9.601551083914856,
  "y": 484.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -284.60155108391484,
  "y": -9.601551083914828,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": -148.49242404917496,
  "y": 533.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": -48.49242404917496,
  "y": 633.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -433.49242404917504,
  "y": -48.49242404917493,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": -148.49242404917496,
  "y": 533.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": -48.49242404917496,
  "y": 633.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -433.49242404917504,
  "y": -48.49242404917493,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": 31.81980515339464,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 131.81980515339464,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 131.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": 31.81980515339464,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 131.81980515339464,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 131.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": 31.81980515339464,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 131.81980515339464,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 131.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": 31.81980515339464,
  "y": 86.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 131.81980515339464,
  "y": 186.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 13.18019484660536,
  "y": 131.81980515339464,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": 70.71067811865476,
  "y": 235.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 170.71067811865476,
  "y": 335.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -135.71067811865476,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": 70.71067811865476,
  "y": 235.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": 170.71067811865476,
  "y": 335.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -135.71067811865476,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": 109.60155108391487,
  "y": 384.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 209.60155108391487,
  "y": 484.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -284.60155108391484,
  "y": 209.6015510839149,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": 109.60155108391487,
  "y": 384.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": 209.60155108391487,
  "y": 484.60155108391484,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -284.60155108391484,
  "y": 209.6015510839149,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": 148.49242404917499,
  "y": 533.4924240491749,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 248.49242404917499,
  "y": 633.4924240491749,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -433.49242404917493,
  "y": 248.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": 148.49242404917499,
  "y": 533.4924240491749,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": 248.49242404917499,
  "y": 633.4924240491749,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -433.49242404917493,
  "y": 248.492424049175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 265,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": 165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 265,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 375,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": 275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 375,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 485,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": 385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 485,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": -65,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": -165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -65,
  "y": -65,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": -175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": -275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -175,
  "y": -175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": -285,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": -385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -285,
  "y": -285,
}
`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `55`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 1 1`] = `55`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 2 1`] = `110`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 3 1`] = `165`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 4 1`] = `220`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
Object {
  "direction": "left",
  "ratio": 1,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
Object {
  "direction": "left",
  "ratio": 2,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
Object {
  "direction": "right",
  "ratio": 1,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
Object {
  "direction": "right",
  "ratio": 2,
  "type": "curved-tile-enlarged",
}
`;
